update some style

--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -62,7 +62,7 @@
 
                     var simulation = d3.forceSimulation()
                         .alpha(0.3)
-                        .force("link", d3.forceLink().id(function (d) {
+                        .force("link", d3.forceLink().distance(70).id(function (d) {
                             return d.id;
                         }))
                         .force("charge", d3.forceManyBody().strength(-3000).distanceMax(160))
@@ -178,7 +178,7 @@
 </head>
 <body>
 <h1>AMR 语义结构图</h1>
-<div class="container h-100">
+<div class="container">
     <lable>请输入要查询的单词</lable>
     <input type="text" id="words">
     <button class="btn btn-default" id="query">查询</button>
