--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -2,18 +2,30 @@
 <html lang="zh-CN">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AMR</title>
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>AMR Graph</title>
+
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/table-fixed.css" rel="stylesheet">
     <script src="/static/js/jquery-3.3.1.min.js"></script>
-    <script src="/static/js/d3.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/d3.min.js"></script>
+    <script src="/static/js/mygraph.js"></script>
 
     <style>
         html,
         body {
             height: 100%;
+        }
+
+        /*.query {*/
+        /*text-align: center;*/
+        /*height: 100px;*/
+        /*vertical-align: middle;*/
+        /*}*/
+
+        h1 {
+            text-align: center;
         }
 
         .links line {
@@ -31,179 +43,54 @@
             stroke-width: 4px;
         }
 
-        .container {
+        .container-fluid {
             height: 100%;
         }
 
         #chart {
-            position: relative;
+            /*position: relative;*/
             height: 100%;
-            left: 1%;
+            /*left: 1%;*/
+            border-style: solid;
+            border-width: 4px;
         }
+
+        /*#myTable {*/
+            /*height: 100px !important;*/
+            /*overflow: scroll;*/
+        /*}*/
     </style>
-
-    <script>
-        $(document).ready(function () {
-            $("#query").click(function () {
-                $.get('/graph?words=' + $("#words").val(), function (graph, status) {
-                    var chartDiv = document.getElementById("chart");
-                    var width = chartDiv.clientWidth;
-                    var height = chartDiv.clientHeight;
-
-                    d3.select("svg").selectAll("*").remove();
-
-                    var svg = d3.select("svg");
-                    svg
-                        .attr("width", width)
-                        .attr("height", height);
-
-                    var color = d3.scaleOrdinal(d3.schemeCategory20);
-
-
-                    var simulation = d3.forceSimulation()
-                        .alpha(0.3)
-                        .force("link", d3.forceLink().distance(70).id(function (d) {
-                            return d.id;
-                        }))
-                        .force("charge", d3.forceManyBody().strength(-3000).distanceMax(160))
-                        .force('collision', d3.forceCollide().radius(function (d) {
-                            return 20;
-                        }))
-                        .force("center", d3.forceCenter(width / 2, height / 2));
-
-                    function dragstarted(d) {
-                        if (!d3.event.active) simulation.alphaTarget(0.3).restart();
-                        d.fx = d.x;
-                        d.fy = d.y;
-                    }
-
-                    function dragged(d) {
-                        d.fx = d3.event.x;
-                        d.fy = d3.event.y;
-                    }
-
-                    function dragended(d) {
-                        if (!d3.event.active) simulation.alphaTarget(0);
-                        d.fx = null;
-                        d.fy = null;
-                    }
-
-                    var link = svg.append("g")
-                        .attr("class", "links")
-                        .selectAll("line")
-                        .data(graph.links)
-                        .enter().append("line")
-                        .attr("stroke-width", 5);
-
-                    var node = svg.append("g")
-                        .attr("class", "nodes")
-                        .selectAll("g")
-                        .data(graph.nodes)
-                        .enter().append("g")
-                        .on("mouseover", handleMouseOver)
-                        .on("mouseout", handleMouseOut);
-
-                    var linktext = svg.append('g')
-                        .attr("class", "linklabelholder")
-                        .selectAll("g")
-                        .data(graph.links)
-                        .enter().append("g")
-                        .append("text")
-                        .attr("class", "linklabel")
-                        .attr("dx", 1)
-                        .attr("dy", ".35em")
-                        .attr("stroke", "#ecbd47")
-                        .attr("text-anchor", "middle")
-                        .text(function (d) {
-                            return d.type
-                        })
-                        .on("mouseover", handleMouseOver)
-                        .on("mouseout", handleMouseOut);
-
-                    var circles = node.append("circle")
-                        .attr("r", 20)
-                        .attr("fill", function (d) {
-                            return color(d.group);
-                        })
-                        .call(d3.drag()
-                            .on("start", dragstarted)
-                            .on("drag", dragged)
-                            .on("end", dragended));
-
-
-                    var node_lables = node.append("text")
-                        .text(function (d) {
-                            return d.content;
-                        })
-                        .attr('x', 25)
-                        .attr('y', 5);
-
-                    simulation
-                        .nodes(graph.nodes)
-                        .on("tick", ticked);
-
-
-                    simulation.force("link")
-                        .links(graph.links);
-
-
-                    function ticked() {
-                        link
-                            .attr("x1", function (d) {
-                                return d.source.x;
-                            })
-                            .attr("y1", function (d) {
-                                return d.source.y;
-                            })
-                            .attr("x2", function (d) {
-                                return d.target.x;
-                            })
-                            .attr("y2", function (d) {
-                                return d.target.y;
-                            });
-
-                        // link label
-                        linktext.attr("transform", function (d) {
-                            return "translate(" + (d.source.x + d.target.x) / 2 + ","
-                                + (d.source.y + d.target.y) / 2 + ")";
-                        });
-
-                        node
-                            .attr("transform", function (d) {
-                                return "translate(" + d.x + "," + d.y + ")";
-                            })
-                    }
-
-                });
-            })
-        });
-
-        // Create Event Handlers for mouse
-        function handleMouseOver(d, i) {  // Add interactivity
-
-            // Use D3 to select element, change color and size
-            d3.select(this).style(
-                "font-size", "300%"
-            );
-            this.parentElement.appendChild(this);
-        }
-
-        function handleMouseOut(d, i) {
-            d3.select(this).style(
-                "font-size", "100%"
-            );
-        }
-    </script>
 
 </head>
 <body>
 <h1>AMR 语义结构图</h1>
-<div class="container">
-    <lable>请输入要查询的单词</lable>
-    <input type="text" id="words">
-    <button class="btn btn-default" id="query">查询</button>
-    <div id="chart">
-        <svg></svg>
+<div class="container-fluid">
+
+    <div class="row" style="height: 60px">
+        <div class="col text-center">
+            <lable class=" align-bottom"><b>请输入要查询的单词</b></lable>
+            <input class="col-5 align-bottom" type="text" id="words">
+            <button class="btn btn-default align-bottom" id="query">查询</button>
+        </div>
+    </div>
+
+    <div class="row h-75">
+        <div class="col-md-2 table-responsive">
+            <table id="myTable" class="table table-hover table-fixed">
+                <caption>点击查询结果显示AMR图像</caption>
+                <thead class="thead-dark">
+                <tr>
+                    <th>Sentence</th>
+                </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
+        </div>
+        <div id="chart" class="col-md-9 h-100">
+            <svg></svg>
+        </div>
     </div>
 </div>
 </body>
