fix the exception node bug

--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -24,6 +24,10 @@
         /*vertical-align: middle;*/
         /*}*/
 
+        .myhighlight{
+            color: #c82333;
+        }
+
         h1 {
             text-align: center;
         }
