add a arrow to graph

--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -24,7 +24,7 @@
         /*vertical-align: middle;*/
         /*}*/
 
-        .myhighlight{
+        .myhighlight {
             color: #c82333;
         }
 
@@ -40,6 +40,11 @@
         .linklabelholder linklabel {
             stroke: #999;
             stroke-opacity: 0.6;
+        }
+
+        #arrow {
+            stroke-width: 1;
+            stroke-dasharray: 0;
         }
 
         .nodes circle {
@@ -60,8 +65,8 @@
         }
 
         /*#myTable {*/
-            /*height: 100px !important;*/
-            /*overflow: scroll;*/
+        /*height: 100px !important;*/
+        /*overflow: scroll;*/
         /*}*/
     </style>
 
