--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -89,7 +89,7 @@
                 <caption>点击查询结果显示AMR图像</caption>
                 <thead class="thead-dark">
                 <tr>
-                    <th>Sentence</th>
+                    <th>Sentences: <label id="snt_num">0</label></th>
                 </tr>
                 </thead>
                 <tbody>
